--- a/virtual-card-shop/package.json
+++ b/virtual-card-shop/package.json
@@ -9,9 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^6.19.2",
+    "csv-parse": "^6.1.0",
     "next": "16.1.1",
-    "prisma": "^7.2.0",
+    "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
