--- a/virtual-card-shop/package.json
+++ b/virtual-card-shop/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.2",
+    "cloudinary": "^2.9.0",
     "csv-parse": "^6.1.0",
     "next": "16.1.1",
     "prisma": "^6.19.2",
