--- a/virtual-card-shop/package.json
+++ b/virtual-card-shop/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@aws-sdk/client-s3": "^3.975.0",
     "@prisma/client": "^6.19.2",
     "cloudinary": "^2.9.0",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.3",
     "next": "16.1.1",
+    "next-auth": "^4.24.13",
     "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
